unpackaged/main/default/objects/litify_pm__COI_Host_Object_Filter__c/litify_pm__COI_Host_Object_Filter__c.object-meta.xml
<CustomObject>
    <label>COI Host Object Filter</label>
    <nameField>
        <label>Host Object Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COI Host Object Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>