unpackaged/main/default/objects/litify_pm__COI_Host_Object_Filter__c/fields/litify_pm__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Field_Value__c</fullName>
    <label>Field Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>