unpackaged/main/default/objects/litify_pm__COI_Host_Object_Filter__c/fields/litify_pm__Host_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Host_Object__c</fullName>
    <label>Host Object</label>
    <referenceTo>litify_pm__COI_Host_Object__c</referenceTo>
    <relationshipLabel>COI Host Object Filters</relationshipLabel>
    <relationshipName>Host_Object_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>