unpackaged/main/default/objects/litify_pm__COI_Host_Object_Filter__c/fields/litify_pm__Related_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Related_Object__c</fullName>
    <description>The API Name of the SObject this filter applies to.</description>
    <label>Related Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>